<resources>
    <string name="app_name">Workout</string>
    <string name="welcome_sign">Welcome to the WORK OUT APP</string>
    <string name="welcome">Welcome, </string>
    <string name="regular">Regular Workout</string>
    <string name="custom">Custom Workout</string>
    <string name="regular_desc">This is the generic workout for a regular person. You should be able to do this in an hour or less. The difficulty set in this workout can be done by most people, making it the best starter workout for a beginner.</string>
    <string name="custom_desc">This allows you to create your own workout. You will be able to set the kind of workout you must do, and the time you have to complete it. It will automatically compute the amount of work you have done. </string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="beginner_desc">This is the generic workout for a regular person. You should be able to do this in an hour or less. The difficulty set in this workout can be done by most people, making it the best starter workout for a beginner."</string>
    <string name="intermediate_desc">Intermediate workout for advanced exercise.</string>
    <string name="abreak">Take a break</string>


    <string name="stretches">Stretches</string>
    <string name="push_ups">Push-ups</string>
    <string name="sit_ups">Sit-ups</string>
    <string name="jumping_jacks">Jumping Jacks</string>
    <string name="planking">Planking</string>
    <string name="squats">Squats</string>

    <string name="next">Next</string>
    <string name="skip">Skip</string>

    <string name="empty">No custom workout</string>
    <string name="create">Create a New Workout</string>

    <string name="congrats">Congratulations!</string>
    <string name="con_sentence">You finished the Workout!</string>
    <string name="main_menu">Main Menu</string>

    <string name="add">ADD</string>

    <string name="start">Start</string>

</resources>
